# clang-apply-replacements

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  clang-apply-replacements_version.txt  pyproject.toml
.github/workflows/: auto-tag.yml  monitor-llvm.yml  prepare-release.yml  release-drafter.yml  release.yml
clang_apply_replacements/: __init__.py
test/: test_executable.py
