[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "clang-apply-replacements"
dynamic = ["version"]
authors = [{name = "Dominic Kempf", email = "ssc@iwr.uni-heidelberg.de"}]
license = { text = "Apache 2.0" }
description = "Clang-apply-replacements is an LLVM-based tool for applying clang-tidy fix-it replacements"
readme = "README.md"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
regex = '^(?P<value>\d+\.\d+\.\d+(\.[1-9]\d*)?)'
input = "clang-apply-replacements_version.txt"

[project.urls]
Clang = "http://clang.llvm.org/"
Documentation = "https://clang.llvm.org/extra/clang-apply-replacements.html"
Download = "https://github.com/llvm/llvm-project/releases"
Source = "https://github.com/cpp-linter/clang-apply-replacements"

[project.scripts]
"clang-apply-replacements" = "clang_apply_replacements:clang_apply_replacements"

[tool.scikit-build]
wheel.packages = ["clang_apply_replacements"]
wheel.py-api = "py2.py3"
cmake.version = ">=3.16.0"
ninja.version = ">=1.10.0"
cmake.verbose = true
logging.level = "DEBUG"

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3
# Set CMAKE_GENERATOR env var which is respected by scikit-build-core to use Ninja on all platforms
environment = "CMAKE_GENERATOR=Ninja"

# Testing commands for our wheels
before-test = [
    "git config --global user.name Name",
    "git config --global user.email foo@bar.com"
]
test-requires = ["pytest", "pytest-git"]
test-command = "pytest {package}/test"
